# dir-handler

./: .gitignore  README.md  directorymaker_argparse.py  directorymaker_json.py  directorymaker_yaml.py  pyproject.toml
.github/workflows/: checks.yml
examples/: structureexample.json  structureexample.txt  structureexampleold.txt
src/dirhandler/: __init__.py  cli.py  directorymaker_json.py  directorymaker_yaml.py  foldermaker.py  make_struct.py  testex.py  yaml_legacy.py
src/dirhandler/examples/: loops.json  nestedtstruc.json  processeddata.json  rawdatadir.json  simplestruc.json  structureexample.json  structureexample.yml  structureguide.json
tests/: test_testing.py
