[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dirhandler"
version = "0.0.1"
description = "A tool for making folders"
authors = [
  { name = "maganasampson", email = "megan.sampson@ukaea.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU LGPL",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "pyYAML>=6.0.2",
]

[project.scripts]
makedirs = "dirhandler.foldermaker:start"


[tool.setuptools.packages.find]
where = ["src"]